[package]
name = "nmt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
bollard = "0.21.0"
clap = { version = "4.5.60", features = ["derive", "env", "string"] }
dirs = "5.0.1"
flate2 = "1.0.34"
futures-util = "0.3.32"
glob = "0.3.1"
oxc_allocator = "0.38.0"
oxc_ast = "0.38.0"
oxc_codegen = "0.38.0"
oxc_minifier = "0.131.0"
oxc_parser = "0.38.0"
oxc_resolver = "11.19.1"
oxc_span = "0.38.0"
remove_empty_subdirs = "0.1.1"
serde_json = "1.0.132"
strum = { version = "0.28.0", features = ["derive"] }
tar = "0.4.45"
tokio = { version = "1.43.1", features = ["full"] }

[dev-dependencies]
assert_fs = "1.1.3"
serial_test = "*"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "docker"
path = "src/docker.rs"
